2008-03-23  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListBindingHelperTest.cs: New assertion for GetListTest () test
	method.

2008-03-21  Jonathan Pobst  <monkey@jpobst.com>

	* MenuItemTest.cs: Add test for #372845.

2008-03-21  Andreia Gaita <avidigal@novell.com> 

	* FocusTest.cs: New test for #372616. Checks if a control inside a
	  UserControl is selected when UserControl gets focus.

2008-03-20  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingSourceTest.cs: New assertion case for DataSource, passing an
	instance of IListSource.
	* ListBindingHelperTest.cs: Make ListSource class internal.

2008-03-20  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewCellTest.cs: Tests for newly implemented stuffs.

2008-03-20  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewCellTest.cs: Don't verify exception message,
	throwing the exception is enough.

2008-03-20  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListBindingHelperTest.cs: Update GetListTest with new assertions.
	Also add GetListItemProperties tests - not working by now, but should
	guide us to a correct implementation.

2008-03-19  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewCellTest.cs: Ignore Size test since a
	cell's height is based off its height.

2008-03-19  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewCellTest.cs: Add new suite of tests.

2008-03-15  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListBindingHelperTest.cs: New GetListItemType test.

2008-03-13  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListBindingHelperTest.cs: New file and a new test.

2008-03-07  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ControlBindingsCollectionTest.cs: New test for 2.0
	Default DataSourceUpdateMode property.

2008-03-06  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListBoxTest.cs: New tests for 2.0 selection methods
	in the different selection modes. Also, in GetSelectedTest (), 