@@ -1,5 +1,10 @@
 2008-03-23  Carlos Alberto Cortez <calberto.cortez@gmail.com>
 
+	* BindingSourceTest.cs: New assertion for DataMember_ListRelationship
+	test method.
+
+2008-03-23  Carlos Alberto Cortez <calberto.cortez@gmail.com>
+
 	* ListBindingHelperTest.cs: New assertion for GetListTest () test
 	method.
 
